<resources>
    <string name="app_name">ecoco</string>
    <string name="home">HOME</string>
    <string name="daily">daily</string>
    <string name="NoDisposable">일회용품 사용하지 않기 (2pt)</string>
    <string name="Shower5">샤워 5분 이내로 끝내기 (1pt)</string>
    <string name="Boiler">보일러 사용 1시간 줄이기 (3pt)</string>
    <string name="PublicTransport">대중교통, 자전거 이용 (5pt)</string>
    <string name="Meat50">하루 육류 섭취 50g이하 (10pt)</string>
    <string name="NoMeat">하루 육류 섭취 X (5pt추가)</string>
    <string name="SeperateCollection">분리수거 확실히 하기 (2pt)</string>
    <string name="Plant">식물 키우기 (1pt)</string>
    <string name="Container">식자제 다회용 용기에 담아 구입  (3pt)</string>
    <string name="Total">Total : </string>
    <string name="button">Button</string>
    <string name="calendar">calendar</string>
    <string name="g_co2">오늘 총 g Co2를 줄였습니다</string>
    <string name="todo">TODO</string>
    <string name="cast">Cast</string>
    <string name="캐릭터">나의캐릭터</string>
    <string name="프로필">프로필</string>
    <string name="today">TODAY</string>
    <string name="cal">달력</string>
    <string name="cha">나의 캐릭터</string>
    <string name="CharacterName">CharacterName</string>
    <string name="profile">프로필</string>
    <string name="INSTAGRAMecoco">ecoco</string>
    <string name="showbotton">showbotton</string>
    <string name="ChangeProfile">프로필 변경하기</string>
    <string name="SendFeedback">피드백 보내기</string>
    <string name="Developers">개발자 소개</string>
    <string name="More">더 많은 이야기</string>
    <string name="AppRate">앱 평점 남기기</string>
    <string name="Logout">로그아웃</string>
    <string name="Splashecoco">ecoco</string>
    <string name="Startecoco">ecoco</string>
    <string name="testCB">test</string>
    <string name="CharacterExplanation">CharacterExplanation</string>
    <string name="save">저  장</string>
    <string name="not_use_code">미사용 코드 뽑기 (1pt)</string>
    <string name="use_fan">에어컨 대신 선풍기 사용 (2pt)</string>
    <string name="total">오늘도 함께 지구를 지켜봐요!</string>
    <string name="_00">00</string>
    <string name="sel_date">날짜를 선택해주세요</string>
    <string name="list">내역</string>
    <string name="score">점수</string>
    <string name="data">데이터</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">상세보기</string>
    <string name="day">day</string>
    <string name="title_activity_character_detail">CharacterDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Ochotonidae">우는 토끼</string>
    <string name="OchotonidaeDetail">북부아시아의 고산지대, 부서진 바위더미나 돌무더기에 서식하는 우는토끼는 작은 덩치와 귀를 가져 언뜻 쥐처럼 보이기도 합니다.
        이름에서 알 수 있듯이 독특한 울음소리로 표현을 하며, 꽃과 과일, 곤충 등을 좋아합니다.
        추운 지역에서 서식하는 우는토끼들은 기후변화로 더위가 심해지면서 생명의 위협을 받고 있습니다.
        또 서식지의 식물유형이 바뀌면서 먹이를 찾기도 점점 어려워지고 있다고 합니다.</string>

    <string name="Chipmunk">하늘다람쥐</string>
    <string name="ChipmunkDetail">긴 가뭄으로 지리산 계곡이 말라 하늘다람쥐가 마실 물이 고갈되고 주위의 침엽수가 고사되어 하늘다람쥐의 생존에 위협을 주고 있습니다.
        기후변화에 의한 생태계의 변화가 하늘다람쥐의 수를 더욱 감소시키고 있습니다.</string>

    <string name="marmotte">마모트</string>
    <string name="marmotteDetail">동면에 들어가야 하는데 이상기후로 일찍 깨거나 아예 동면하지 못하기에 겨울철에 잡아먹힐 위험성도 높고
        겨울철동안 먹이도 충분하지 않게 된다..</string>

    <string name="Acheetah">아프리카 치타</string>
    <string name="AcheetahDetail">아프리카 치타는 세상에서 가장 빠른 동물입니다. 그래도 기후변화의 속도를 따라가기엔 역부족인걸까요?
        극심한 폭염으로 인해 수컷 치타의 남성호르몬 수치가 낮아져 더이상 아이를 가질 수 없는 상태에 이르렀습니다.
        단 7,100마리밖에 남지 않은 치타는 무사히 대를 이어갈 수 있을까요?</string>

    <string name="odobenus">바다코끼리</string>
    <string name="odobenusDetail">새끼바다코끼리는 2년동안 사냥을 못하는데 이때 어미가 사냥을 할 동안 쉬고 있을 유빙이 사라지고 있다.</string>

    <string name="panda">판다</string>
    <string name="pandaDetail">영화 쿵푸팬더의 주인공, 자이언트 판다도 기후변화의 위협에서 자유롭지 못합니다.
        생존에 필요한 영양 뿐 아니라 서식처를 제공하는 대나무 숲이 기후변화로 인해 빠른 속도로 없어지고 있기 때문입니다.
        2014년 기준, 약 1,854마리의 자이언트 판다가 야생에서 살고 있습니다.</string>

    <string name="polarbear">북극곰</string>
    <string name="polarbearDetail">빙하가 사라져 터전도 사라지고 수온 상승으로 인해 적절한 사냥감도 줄어들고 있다.</string>

    <string name="tiger">벵갈호랑이</string>
    <string name="tigerDetail">방글라데시와 인도의 습지에는 현재 약 5,000 마리의 벵갈 호랑이가 살고 있습니다.
        그러나 기후변화로 인한 해수면 상승으로 인해 벵갈호랑이의 서식처가 물에 잠길 위험에 처했습니다.
        유엔은 2070년이 되면 벵갈호랑이가 살 수 있는 습지가 모두 물에 잠겨 완전히 멸종할 것이라고 경고했습니다.</string>

    <string name="turtle">바다거북</string>
    <string name="turtleDetail">바닷속 플라스틱으로 괴로운 바다거북은 지구온난화의 피해자이기도 합니다. 바다거북은 해변가 모래 속에 알을 낳습니다.
        모래에 수분기가 많고 시원할수록 수컷이 많이 부화하고, 모래가 따뜻하고 건조할수록 암컷이 많이 부화합니다.
        지구 온도 상승으로 인해 이제 수컷 바다거북은 거의 태어나지 않습니다. 지난 20년 동안 태어난 바다거북의 99%가 암컷이었습니다.</string>


    <string name="dd">상세 설명</string>
    <string name="character_name">이름</string>
    <string name="clicktotal">눌러서 획득한 총 점수 보기</string>
    <string name="selpoint">선택한 날의 포인트</string>
    <string name="allpoint">총 획득 포인트</string>
    <string name="arrow">→</string>
    <string name="setting">설정</string>
    <string name="back_arrow">←</string>
    <string name="clicksave">저장을 눌러주세요!</string>>
</resources>