<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:text="@string/today"
        style="@style/TextTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumbarungothic"
        android:text="Total"
        android:textColor="@color/main1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.20999998" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumbarungothic"
        android:text="0"
        android:textColor="@color/main1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Total"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.20999998" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="340dp"
        android:layout_height="460dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="100"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbHorizontal="@color/main1"
        android:scrollbarThumbVertical="@color/main1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.16">


        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="450dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/testCB"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/testCB"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/test3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/testCB"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_NoDisposable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/NoDisposable"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_Shower5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/Shower5"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_Boiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/Boiler"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_PublicTransport"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/PublicTransport"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_Meat50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/Meat50"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_NoMeat"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/NoMeat"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <FrameLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <CheckBox
                android:id="@+id/CB_Plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/Plant"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_SeperateCollection"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/SeperateCollection"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />

            <CheckBox
                android:id="@+id/CB_Container"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:fontFamily="@font/nanumbarungothic"
                android:text="@string/Container"
                android:textColor="@color/black"
                app:buttonTint="@color/main1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>