<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView6"
            style="@style/TextTitle"
            android:text="@string/cha"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relative_container"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ochotonidae"
                        tools:ignore="ContentDescription" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="724dp"
                        android:background="@drawable/circle_shape"
                        android:indeterminate="false"
                        android:indeterminateDrawable="@drawable/home"
                        android:max="100"
                        android:progress="50"
                        android:progressDrawable="@drawable/circulart_progress_bar"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nanumbarungothic"
                            android:text="Name"
                            android:textColor="@color/main1"
                            android:textSize="20sp"
                            tools:ignore="MissingConstraints" />

                        <Button
                            android:id="@+id/ButtonForDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:gravity="left"
                            android:text="→"
                            android:textColor="@color/main1"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/editTextTextMultiLine2"
                        android:layout_width="167dp"
                        android:layout_height="109dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/nanumbarungothic"
                        android:gravity="start|top"
                        android:hint="@string/app_name"
                        android:text="@string/CharacterExplanation"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="360dp"
                android:layout_height="360dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/chipmunk"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/chipmunk"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/coralreef"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="TODO"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/marmotte"
                        app:tint="#A9A9A9" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/cheetah"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/odobenus"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/panda"
                        app:tint="#A9A9A9" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/polarbear"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/tiger"
                        app:tint="#A9A9A9" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/turtle"
                        app:tint="#A9A9A9" />
                </TableRow>
            </TableLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>